<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <!-- Time Picker Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#34393E">
            <TimePicker
                android:timePickerMode="spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyTimePickerSpinner"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/white"/>
        </RelativeLayout>




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tv_date_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Today,"
                            android:textColor="@color/white"/>
                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="June 9"
                            android:textColor="@color/white"
                            android:layout_marginLeft="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal"
                        android:layout_marginRight="5dp">
                        <ImageView
                            android:id="@+id/iv_calendar"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_calendar"/>
                    </LinearLayout>
                </LinearLayout>







                <!-- days of the week -->
                <LinearLayout
                    android:weightSum="7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">
                    <Button
                        android:id="@+id/mon"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/mon"
                        android:background="@drawable/unselected_btn_white"
                        android:layout_marginRight="4dp"/>
                    <Button
                        android:id="@+id/tue"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/tue"
                        android:background="@drawable/unselected_btn_white"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <Button
                        android:id="@+id/wed"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/wed"
                        android:background="@drawable/unselected_btn_white"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <Button
                        android:id="@+id/thu"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/thu"
                        android:background="@drawable/unselected_btn_white"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <Button
                        android:id="@+id/fri"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/fri"
                        android:background="@drawable/unselected_btn_white"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <Button
                        android:id="@+id/sat"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/sat"
                        android:textColor="@color/app_color"
                        android:background="@drawable/unselected_btn_white"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <Button
                        android:id="@+id/sun"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/sun"
                        android:textColor="@color/red"
                        android:background="@drawable/unselected_btn_white"
                        android:layout_marginLeft="4dp"/>
                </LinearLayout>




                <EditText
                    android:id="@+id/et_alarm_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alarm_title"
                    android:textColorHint="@color/dialog"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"/>
               <!-- <TextView
                    android:id="@+id/tv_alarm_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="School"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dialog"
                    android:layout_marginTop="20dp"/>-->

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Alarm Sound"
                            android:textSize="17sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Simple ringtone"
                            android:textColor="@color/white"
                            android:layout_marginTop="2dp"/>
                    </LinearLayout>
                    <Switch
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line"
                    android:layout_marginTop="10dp"/>






                <!-- Vibration -->
                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vibration"
                            android:textSize="17sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Basic call"
                            android:textColor="@color/white"
                            android:layout_marginTop="2dp"/>
                    </LinearLayout>
                    <Switch
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line"
                    android:layout_marginTop="10dp"/>






                <!-- Snooze -->
                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Snooze"
                            android:textSize="17sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5 minutes, 3 times"
                            android:textColor="@color/white"
                            android:layout_marginTop="2dp"/>
                    </LinearLayout>
                    <Switch
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"/>




            </LinearLayout>
        </ScrollView>

    </LinearLayout>






    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/dialog"
            android:layout_marginRight="2dp"/>
        <Button
            android:id="@+id/save_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/app_color"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>

</RelativeLayout>